Change imageContainer height to max-height to avoid clipping on smaller screens

--- a/src/components/ImageContainer/ImageContainer.module.scss
+++ b/src/components/ImageContainer/ImageContainer.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  height: 80vh;
+  min-height: 80vh;
 
   img {
     width: 100%;
